# kp11

./: .clang-format  .drone.yml  .gitignore  CMakeLists.txt  CONCEPTS.md  Doxyfile  README.md
doc/: marker.dox  resource.dox  strategy.dox
include/kp11/: CMakeLists.txt  allocator.h  allocator.t.cpp  bitset.h  bitset.t.cpp  buffer.h  buffer.t.cpp  cascade.h  fallback.h  fallback.t.cpp  fence.h  free_block.h  free_block.t.cpp  heap.h  heap.t.cpp  list.h  list.t.cpp  local.h  local.t.cpp  memory_resource.h  monotonic.h  monotonic.t.cpp  nullocator.h  nullocator.t.cpp  pool.h  pool.t.cpp  segregator.h  segregator.t.cpp  stack.h  stack.t.cpp  traits.h  traits.t.cpp  utility.h
include/kp11/detail/: static_vector.h  static_vector.t.cpp
public/: fallback.h  fallback.t.cpp  free_block.h  list.t.cpp  local.h  local.t.cpp  monotonic.h  traits.h  traits.t.cpp
src/: heap.cpp
test/: CMakeLists.txt  allocator_test.cpp  bitset_test.cpp  cascade_test.cpp  fallback_test.cpp  fence_test.cpp  free_block_test.cpp  heap_test.cpp  list_test.cpp  local_test.cpp  memory_resource_test.cpp  monotonic_test.cpp  pool_test.cpp  stack_test.cpp  traits_test.cpp  utility_test.cpp
